# agentic-coding-sync

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
src/sync_agentic_tools/: __init__.py  backup.py  cli.py  config.py  diff.py  files.py  gitignore.py  propagate.py  rename.py  special_files.py  state.py  sync.py  ui.py  utils.py
src/sync_agentic_tools/templates/: __init__.py  default-config.yaml
tests/: conftest.py  test_config.py  test_files.py  test_gitignore.py  test_state.py  test_sync.py  test_utils.py
